--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.Emp-Table thead{
+  background: rgb(128, 196, 182)
+}
 
 .App-header {
   background-color: #282c34;
